--- a/templates/partials/modal_contact.html
+++ b/templates/partials/modal_contact.html
@@ -10,7 +10,11 @@
                 <input type="hidden" name="id" value="">
                 
                 <div class="space-y-4">
-                    <input name="name" required placeholder="ФИО *" class="w-full border border-slate-300 p-2 rounded text-sm focus:border-primary-600 focus:outline-none">
+                    <div class="grid grid-cols-3 gap-4">
+                        <input name="last_name" required placeholder="Фамилия *" class="w-full border border-slate-300 p-2 rounded text-sm focus:border-primary-600 focus:outline-none">
+                        <input name="first_name" placeholder="Имя" class="w-full border border-slate-300 p-2 rounded text-sm focus:border-primary-600 focus:outline-none">
+                        <input name="middle_name" placeholder="Отчество" class="w-full border border-slate-300 p-2 rounded text-sm focus:border-primary-600 focus:outline-none">
+                    </div>
                     <div class="grid grid-cols-2 gap-4">
                         <input name="department" placeholder="Департамент" class="w-full border border-slate-300 p-2 rounded text-sm">
                         <input name="role" placeholder="Должность" class="w-full border border-slate-300 p-2 rounded text-sm">
@@ -20,7 +24,7 @@
                         <input name="phone" placeholder="Телефон" class="w-full border border-slate-300 p-2 rounded text-sm">
                     </div>
                     <!-- Новое поле URL -->
-                    <input name="link" placeholder="Ссылка (Web/LinkedIn/TG)" class="w-full border border-slate-300 p-2 rounded text-sm">
+                    <input name="link" placeholder="Ссылка (Пульс)" class="w-full border border-slate-300 p-2 rounded text-sm">
                     
                     <textarea name="notes" placeholder="Заметки" class="w-full border border-slate-300 p-2 rounded text-sm" rows="3"></textarea>
                 </div>
