--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     </main>
 
     <footer class="text-center py-6 text-slate-400 text-xs">
-        &copy; 2025 KBase Internal System
+        &copy; 2025 Ilusha80 Internet Quadro System
     </footer>
 
     <!-- Scripts -->
