feat: restructure application architecture by splitting main.js into modular components and updating script references in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,6 @@
 
     <!-- Scripts -->
     <script src="{{ url_for('static', filename='js/api.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 </html>
