--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="{{ url_for('static', filename='js/api.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='js/api.js') }}"></script> -->
     <script type="module" src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 </html>
